added insert api with css

--- a/EmployeePayrollMVC/EmployeePayrollMVC/Views/Shared/_Layout.cshtml
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - EmployeePayrollMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/AddEmp.css" />
 </head>
 <body>
     <header>
