added complted mvc emp pall roll

--- a/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Create.cshtml
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Create.cshtml
@@ -3,66 +3,87 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Employee</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmpId" class="control-label"></label>
-                <input asp-for="EmpId" class="form-control" />
-                <span asp-validation-for="EmpId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProfileImage" class="control-label"></label>
-                <input asp-for="ProfileImage" class="form-control" />
-                <span asp-validation-for="ProfileImage" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department" class="control-label"></label>
-                <input asp-for="Department" class="form-control" />
-                <span asp-validation-for="Department" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Salary" class="control-label"></label>
-                <input asp-for="Salary" class="form-control" />
-                <span asp-validation-for="Salary" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Startdate" class="control-label"></label>
-                <input asp-for="Startdate" class="form-control" />
-                <span asp-validation-for="Startdate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Notes" class="control-label"></label>
-                <input asp-for="Notes" class="form-control" />
-                <span asp-validation-for="Notes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<link rel="stylesheet" href="~/css/AddEmp.css"  />
+<div class="header">
+    <img src="~/assets/images/logo.png" style="width:50px;height:47px"/>
+    <div><span style="color: #82A70C"> EMPLOYEE </span><br /><span style="color: #42515F"> PAYROLL</span></div>
 </div>
-
 <div>
-    <a asp-action="Index">Back to List</a>
+    <h2 class="Create" style="color: blue; Background: aqua"; >Add Employee</h2>
 </div>
+    
+    <div style="background-color:#F2F3F4" class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="EmpId" class="control-label"></label>
+                    <input asp-for="EmpId" class="form-control" />
+                    <span asp-validation-for="EmpId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProfileImage" class="flex-column"></label>
+                    <div>
+                        @Html.RadioButtonFor(model => model.ProfileImage, "~/assets/profiles/Ellipse -2.png")
+                        <img class="image1" src="~/assets/profiles/Ellipse -2.png" style="width:35px;height:35px" />
+                        @Html.RadioButtonFor(model => model.ProfileImage, "~/assets/profiles/Ellipse -1.png")
+                        <img class="image2" src="~/assets/profiles/Ellipse -1.png"  style="width:35px;height:35px"/>
+                        @Html.RadioButtonFor(model => model.ProfileImage, "~/assets/profiles/Ellipse -3.png")
+                        <img class="image3" src="~/assets/profiles/Ellipse -3.png"  style="width:35px;height:35px" />
+                        @Html.RadioButtonFor(model => model.ProfileImage, "~/assets/profiles/Ellipse -4.png")
+                        <img class="image4" src="~/assets/profiles/Ellipse -4.png"  style="width:35px;height:35px" />
+                    </div>
+                   @*<select asp-for="ProfileImage" class="form-control" />*@
+                    <span asp-validation-for="ProfileImage"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Gender" class="control-label"></label>
+                    <select asp-for="Gender" class="form-control">
+                        <option>Select Gender</option>
+                        <option>Male</option>
+                        <option>Female</option>
+                    </select>
+                    <span asp-validation-for="Gender" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Department" class="control-label"></label>
+                    <input asp-for="Department" class="form-control" />
+                    <span asp-validation-for="Department" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Salary" class="control-label"></label>
+                    <input asp-for="Salary" class="form-control" />
+                    <span asp-validation-for="Salary" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Startdate" class="control-label"></label>
+                    <input asp-for="Startdate" class="form-control" />
+                    <span asp-validation-for="Startdate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Notes" class="control-label"></label>
+                    <input asp-for="Notes" class="form-control" />
+                    <span asp-validation-for="Notes" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="reset" value="Reset" class="btn-danger" />
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="buttons";colour:red>
+        <a asp-action="Index">Back to List </a>
+    </div>
+
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+@*</div>*@
