--- a/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Delete.cshtml
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Delete.cshtml
@@ -3,9 +3,20 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<link rel="stylesheet" href="~/css/DeleteEmp.css" />
+<div class="head">
+    <img src="~/assets/images/logo.png" style="width:50px;height:47px" />
+    <div>
+        <span style="color: #82A70C">EMPLOYEE</span><br />
+        <span style="color: #42515F"> PAYROLL</span>
+    </div>
+</div>
 
-<h1>Delete</h1>
 
+<div class="heading">
+    <span style="color:green">Delete</span><br />
+    <span style="color: yellow"> Employee</span>
+</div>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Employee</h4>
