--- a/EmployeePayrollMVC/EmployeePayrollMVC/Views/Shared/_Layout.cshtml
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/AddEmp.css" />
+    <link rel="stylesheet" href="~/css/DeleteEmp.css" />
+    <link rel="stylesheet" href="~/css/EditEMP.css" />
+    <link rel="stylesheet" href="~/css/DetailEmp.css" />
+    <link rel="stylesheet" href="~/css/IndexEMP.css" />
 </head>
 <body>
     <header>
