--- a/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Create.cshtml
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/Views/Employee/Create.cshtml
@@ -13,21 +13,21 @@
 </div>
     
     <div style="background-color:#F2F3F4" class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" >
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="EmpId" class="control-label"></label>
+                    <label asp-for="EmpId" class="control-label"style="padding:10px" ></label>
                     <input asp-for="EmpId" class="form-control" />
                     <span asp-validation-for="EmpId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
+                    <label asp-for="Name" class="control-label"style="padding:10px"></label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ProfileImage" class="flex-column"></label>
+                    <label asp-for="ProfileImage" class="flex-column" style="padding:10px"></label>
                     <div>
                         @Html.RadioButtonFor(model => model.ProfileImage, "~/assets/profiles/Ellipse -2.png")
                         <img class="image1" src="~/assets/profiles/Ellipse -2.png" style="width:35px;height:35px" />
@@ -42,7 +42,7 @@
                     <span asp-validation-for="ProfileImage"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Gender" class="control-label"></label>
+                    <label asp-for="Gender" class="control-label" style="padding:10px"></label>
                     <select asp-for="Gender" class="form-control">
                         <option>Select Gender</option>
                         <option>Male</option>
@@ -51,29 +51,28 @@
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Department" class="control-label"></label>
+                    <label asp-for="Department" class="control-label"style="padding:10px"></label>
                     <input asp-for="Department" class="form-control" />
                     <span asp-validation-for="Department" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Salary" class="control-label"></label>
+                    <label asp-for="Salary" class="control-label"style="padding:10px"></label>
                     <input asp-for="Salary" class="form-control" />
                     <span asp-validation-for="Salary" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Startdate" class="control-label"></label>
+                    <label asp-for="Startdate" class="control-label"style="padding:10px"></label>
                     <input asp-for="Startdate" class="form-control" />
                     <span asp-validation-for="Startdate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Notes" class="control-label"></label>
+                    <label asp-for="Notes" class="control-label"style="padding:10px"></label>
                     <input asp-for="Notes" class="form-control" />
                     <span asp-validation-for="Notes" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
-                    <input type="reset" value="Reset" class="btn-danger" />
-
+                    <input type="reset" value="Reset" class="btn-danger"style=" width: 64px; height: 38px; margin-left: 220px; border-radius: 0.25rem;"/>
                 </div>
             </form>
         </div>
