--- a/EmployeePayrollMVC/EmployeePayrollMVC/wwwroot/css/AddEmp.css
+++ b/EmployeePayrollMVC/EmployeePayrollMVC/wwwroot/css/AddEmp.css
@@ -5,6 +5,7 @@
 ﻿
 .Create {
     align-content: center;
+    S
 }
 
 .row {
@@ -20,10 +21,11 @@
 
 .form-group {
     display: flex;
+    padding: 10px;
     flex-direction: row;
-    margin-bottom: 10px;
-    align-items:center;
-    border:0px solid green;
+    align-items: center;
+    border: 0px solid green;
+    padding: 10px;
 }
 .form-control{
     width:100%;
@@ -32,10 +34,20 @@
     border-radius:4px;
     resize:vertical;
 }
-.buttons{
-    text-align:center;
+/*.btn-danger{
+    width: 64px;
+    height: 38px;
+    margin-left: 220px;
+    border-radius: 0.25rem;
+}*/
+.buttons {
+    text-align: center;
 }
 
 .back {
     padding-right: 192px;
 }
+.control-label {
+}
+
+
